# embeddenator-workspace

./: .copilot  .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  HEALTH_CHECK_IMPLEMENTATION.md  LICENSE  PATCH_MANAGEMENT_GUIDE.md  README.md  debug_test.rs
.github/workflows/: ci.yml  release.yml
src/: cargo.rs  cargo_tests.rs  health.rs  health_tests.rs  lib.rs  patch.rs  patch_tests.rs  version.rs  version_tests.rs  workspace.rs
tests/: integration_tests.rs
