[package]
name = "embeddenator-workspace"
version = "0.20.0-alpha.1"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Workspace management utilities for embeddenator development"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-workspace"
keywords = ["workspace", "embeddenator"]
categories = ["development-tools"]

[dependencies]

[[bin]]
name = "embeddenator-workspace"
path = "src/bin/embeddenator_workspace.rs"
