[package]
name = "embeddenator-workspace"
version = "0.20.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Workspace management utilities for embeddenator development"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-workspace"
keywords = ["workspace", "embeddenator"]
categories = ["development-tools"]

[dependencies]
clap = { version = ">=4.5, <5.0", features = ["derive"] }
toml_edit = ">=0.22, <1.0"
anyhow = ">=1.0, <2.0"
semver = ">=1.0, <2.0"
walkdir = ">=2.4, <3.0"
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0, <2.0"
colored = ">=2.1, <3.0"
tokio = { version = ">=1.35, <2.0", features = ["full"] }
git2 = ">=0.18, <1.0"

[dev-dependencies]
tempfile = ">=3.8, <4.0"

[[bin]]
name = "embeddenator-workspace"
path = "src/bin/embeddenator_workspace.rs"
